--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components{
+  body{
+      margin:0;
+      background-color:white;
+    font-family: 'Ubuntu', sans-serif;
+  }
+    /* .bb{
+        
+        border: 1px solid black;
+       
+    } */
+    .button{
+        background: linear-gradient(90deg,#ec0623,#ff8717);
+    }
+    .active{
+        
+        color: linear-gradient(89.94deg,#ec0623,#ff8717);
+        
+    }
+
+    .activeBtn{
+      background-color:#1c076c;
+   color:white;
+   border-right: 5px solid white;
+    }
+
+    .activenNav{
+      background-color:white;
+   color:black;
+  
+    }
+
+
+
+    .buttonn{
+     height: 50px;
+    
+
+    }
+    .font{
+        font-family: 'Space Grotesk', sans-serif;
+    }
+.bar{
+   background-color: linear-gradient(to right, rgb(249, 168, 212), rgb(216, 180, 254), rgb(129, 140, 248))
+}
+input[type="radio"] + label span {
+    transition: background .2s,
+      transform .2s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input[type="radio"] + label span:hover,
+input[type="radio"] + label:hover span{
+  transform: scale(1.2);
+} 
+
+input[type="radio"]:checked + label span {
+  background-color: #ea6164; 
+  box-shadow: 0px 0px 0px 2px white inset;
 }
+
+input[type="radio"]:checked + label{
+   color: #ea6164; 
+}
+
+
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    pointer-events: auto;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    -webkit-appearance: none;
+    @apply bg-green-500;
+    @apply w-6 h-6 appearance-none pointer-events-auto;
+  }
